@@ -1431,9 +1431,39 @@ packet_ver: 25
 //0x07f6,14
 
 //2009-11-03aRagexeRE
-//0x07f7,0
-//0x07f8,0
-//0x07f9,0
+//0x07f7,-1
+//0x07f8,-1
+//0x07f9,-1
+
+//2009-11-17aRagexeRE
+//0x07fa,8
+
+//2009-11-18cRagexeRE
+0x07fb,25
+
+//2009-11-24aRagexeRE
+//0x07fc,10
+//0x07fd,-1
+//0x07fe,26
+//0x07ff,-1
+
+//2009-12-08aRagexeRE
+//0x0800,-1
+//0x0801,-1
+
+//2009-12-22aRagexeRE
+//0x0802,18
+//0x0803,4
+//0x0804,8
+//0x0805,0
+//0x0806,4
+//0x0807,2
+//0x0808,4
+//0x0809,14
+//0x080a,50
+//0x080b,18
+//0x080c,6
+
 
 //Add new packets here
 //packet_ver: 26
